# karta

./: .augmentignore  .gitignore  .npmrc  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  VISION.md  data_layer_connection_WIP.md  data_layer_server_WIP.md  docker-compose.yml  notworking_postupdate.ps  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  strings_notworking_postupdate.dot  strings_notworking_update.dot  strings_working_postupdate.dot  strings_working_update.dot  tailwind.config.js  tsconfig.base.json  tsconfig.json  working_postupdate.ps
.github/actions/: deploy.yml
.github/workflows/: build.yml  deploy-website.yml  deploy.yml  deployer.yml
.xwin-cache/dl/: Microsoft.VC.14.38.17.8.CRT.Headers.base.vsix  Win11SDK_10.0.22621_headers.msi  Win11SDK_10.0.22621_libs_x86_64.msi  Win11SDK_10.0.22621_store_headers.msi  Win11SDK_10.0.22621_store_libs.msi  Win11SDK_10.0.22621_x64_headers.msi  manifest_17.json
assets/: grid_material.wgsl
assets/copy/: welcome_and_vault.txt
bevy_karta_client/: Cargo.toml  README.md
bevy_karta_client/src/: core_plugin.rs  lib.rs
bevy_karta_client/src/context_plugin/: events.rs  mod.rs  pe_index.rs
bevy_karta_client/src/edge_plugin/: mod.rs
bevy_karta_client/src/node_plugin/: mod.rs
bevy_karta_client/src/vault_plugin/: mod.rs
bevy_karta_ui/: Cargo.toml  README.md  build.rs
bevy_karta_ui/examples/: context_commands.rs
bevy_karta_ui/src/: lib.rs
bevy_karta_ui/src/assets/: grid_material.wgsl  mod.rs
bevy_karta_ui/src/assets/shaders/: box_material.wgsl  cubic_bezier_sdf.wgsl  curve_material.wgsl  sdfs.wgsl
bevy_karta_ui/src/core/: context_commands.rs  mod.rs  next_steps.rs
bevy_karta_ui/src/events/: mod.rs  node_events.rs  nodes.rs
bevy_karta_ui/src/input/: mod.rs  pointer.rs
bevy_karta_ui/src/settings/: theme.rs  theme_defaults.ron
bevy_karta_ui/src/ui/: asset_manager.rs  context_menu.rs  curve_material.rs  edges.rs  graph_cam.rs  grid.rs  mod.rs  nodes.rs  popup.rs  simulation.rs  ui_base_panel.rs
bevy_karta_ui/src/ui/components/: context_menu.rs  popup.rs
bevy_karta_ui/src/ui/nodes/: node_ui_types.rs
bevy_karta_ui/tests/: testables.rs
core/: LICENSE  README.md  package.json  tsconfig.json
core/src/: README.md  constants.ts  index.ts
debug/: sprite_picking_err  sprite_picking_ok
docs/: architecture.md
docs/links/: Link to 2024-10-07.md
karta_bevy/: Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml
karta_bevy/assets/: edge_material.wgsl
karta_bevy/src/: lib.rs
karta_bevy/workflows/: deployer.yml
karta_server/: .gitignore  Cargo.toml  README.md  diff_data_layer_connection_21_1.md  second_uuid_refactor_attempt.md
karta_server/docs/: agdb_docs_raw.md
karta_server/docs/perf_reports/: fs_graph_test_able_to_insert_and_delete_node_attributes.ron  fs_graph_test_can_create_nodes_with_long_paths.ron  fs_graph_test_create_graph_db_file_in_custom_storage_directory.ron  fs_graph_test_create_node_and_open_it.ron  fs_graph_test_creating_new_graph_creates_archetype_nodes.ron  fs_graph_test_creating_node_with_deep_path_creates_intermediate_nodes.ron  fs_graph_test_graph_with_same_name_exists__use_the_existing_and_dont_create_new.ron  fs_graph_test_insertion_of_attributes_on_nonexisting_node_should_fail.ron  fs_graph_test_node_context_can_be_indexed.ron  fs_graph_test_opening_dir_connections__indexes_and_creates_nodes.ron  fs_graph_test_opening_folder_connections__indexes_folder_contents.ron  fs_graph_test_opening_node_that_does_not_exist_fails.ron  fs_graph_test_opening_physical_dir__is_indexed_and_created.ron  fs_graph_test_opening_root_node_connections__returns_vector_of_nodes.ron  fs_graph_test_reserved_node_attributes_cannot_be_deleted.ron  fs_graph_test_reserved_node_attributes_cannot_be_inserted.ron
karta_server/src/: elements.rs  filter.rs  graph.rs  graph_scope.rs  graph_trait.rs  graph_traits.rs  lib.rs  main.rs  nodetype.rs  path_ser.rs  utils.rs
karta_server/src/actions/: mod.rs
karta_server/src/context/: context.rs  context_db.rs  context_settings.rs  mod.rs
karta_server/src/elements/: attribute.rs  edge.rs  mod.rs  node.rs  node_path.rs  nodetype.rs  view_node.rs
karta_server/src/fs_reader/: mod.rs
karta_server/src/graph_agdb/: graph_core.rs  graph_edge.rs  graph_node.rs  graph_ntype.rs  mod.rs
karta_server/src/graph_commands/: graph_core.rs  graph_node.rs  mod.rs
karta_server/src/graph_commands/commands/: edge.rs  mod.rs  node.rs
karta_server/src/graph_traits/: graph_core.rs  graph_edge.rs  graph_node.rs  graph_ntype.rs  mod.rs
karta_server/src/server/: asset_endpoints.rs  context_endpoints.rs  data_endpoints.rs  edge_endpoints.rs  export_endpoints.rs  karta_service.rs  mod.rs  search_endpoints.rs  search_tests.rs  settings.rs  write_endpoints.rs
karta_server/src/server/write_endpoints_tests/: mod.rs  test_context.rs  test_helpers.rs  test_node_creation.rs  test_node_deletion.rs  test_node_movement.rs  test_node_rename.rs
karta_server/tests/: attr.rs  core.rs  edge.rs  graph.rs  node.rs  nodetypes.rs  utils.rs
karta_svelte/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
karta_svelte/docs/: karta-vision.md
karta_svelte/src/: app.html  hooks.server.ts
karta_svelte/src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  tauri.conf.json
karta_svelte/src-tauri/icons/: icon.icns
karta_svelte/src-tauri/src/: lib.rs
karta_svelte/static/: tutorial-sections.json  tutorial-sections.md  tutorial.json
karta_svelte_client/: package-lock.json  package.json  tailwind.config.js
runtime/: README.md  package.json  tsconfig.build.json  tsconfig.json
runtime/src/: index.ts  (+1 more)
src/: action.rs  actions.rs  app.css  context.rs  events.rs  graph.rs  hooks.server.ts  input.rs  lib.rs  main.rs  modes.rs  scene.rs  settings.rs  tools.rs  ui.rs  vault.rs
src-tauri/: tauri.conf.json
static/: tutorial.json
website/: .gitignore  README.md  architecture.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  thesis.md  vision.md
(+581 files in other folders)
