[package]
name = "karta"
version = "0.1.0"
edition = "2021"
rust_version = "1.74.1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
exclude = ["dist", "build", "assets", "credits"]


[features]
dev = [
    "bevy/dynamic_linking",
]

[dependencies]
bevy = { version = "0.12.1", features = ["bevy_asset","jpeg", "bmp", "tga","webp", "file_watcher", "exr"] }

bevy_mod_picking = { version = "0.17.0", features = ["backend_bevy_ui"]}
bevy_prototype_lyon = "0.10.0"
bevy_svg = "0.12.0"
bevy_cosmic_edit = "0.15.1"
bevy_tweening = "0.9.0"

# rive-bevy = { git = "https://github.com/rive-app/rive-bevy" }

# bevy_smud = "0.7.0"
# bevy_gaussian_splatting = "0.4.0"
bevy_mod_debugdump = "0.9.0"
bevy-inspector-egui = "0.21.0"
# bevy_cosmic_edit = "0.13.0"


lyon = "1.0.1"
rand = "0.8.5"
ron = "0.8.1"
thiserror = "1.0"
serde = { version = "1.0.188", features = ["derive"]}
enum-iterator = "1.4.1"
directories = "5.0.1"
rfd = { version = "0.12.1", default-features = false, features = ["xdg-portal"] }
native-dialog = "0.7.0"
bevy_embedded_assets = "0.9.1"

blake3 = { version = "1.5", features=["pure"] }
cross = "0.2.5"



[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[toolchain]
channel = "nightly"

[build-dependencies]
embed-resource = "1.4"