[package]
name = "bevy_karta_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.15.3"
directories = "6.0.0"
native-dialog = "0.7.0"


# Karta subcrates
karta_server = { path = "../karta_server" }
