[package]
name = "karta"
version = "0.1.0"
edition = "2021"
rust_version = "1.74.1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
exclude = ["dist", "build", "assets", "credits"]


[features]
dev = [
    "bevy/dynamic_linking",
]

[dependencies]
bevy = { version = "0.14.2", features = ["bevy_asset","jpeg", "bmp", "tga","webp", "file_watcher", "exr"] }


ron = "0.8.1"
thiserror = "1.0"
serde = { version = "1.0.188", features = ["derive"]}
native-dialog = "0.7.0"
bevy_embedded_assets = "0.11"

blake3 = { version = "1.5", features=["pure"] }
cross = "0.2.5"

# Karta subcrates
bevy_fs_graph = { git = "https://github.com/teodosin/bevy_fs_graph", branch="main"}
bevy_overlay_graph = { git = "https://github.com/teodosin/bevy_overlay_graph", branch="main" }
iyes_perf_ui = "0.3.0"

[patch."https://github.com/teodosin/bevy_fs_graph.git"]
bevy_fs_graph = { path = "../bevy_fs_graph" }
[patch."https://github.com/teodosin/bevy_overlay_graph.git"]
bevy_overlay_graph = { path = "../bevy_overlay_graph" }


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[toolchain]
channel = "nightly"
