[package]
name = "karta"
version = "0.1.0"
edition = "2021"
rust_version = "1.74.1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
exclude = ["dist", "build", "assets", "credits"]


[features]
dev = [
    "bevy/dynamic_linking",
]

[dependencies]
bevy = { version = "0.14.2", features = ["bevy_asset","jpeg", "bmp", "tga","webp", "file_watcher", "exr"] }


ron = "0.8.1"
thiserror = "1.0"
serde = { version = "1.0.188", features = ["derive"]}
native-dialog = "0.7.0"
bevy_embedded_assets = "0.11"

blake3 = { version = "1.5", features=["pure"] }
cross = "0.2.5"

# Karta subcrates
bevy_karta_client = { git = "https://github.com/teodosin/bevy_karta_client", branch="main"}
bevy_karta_ui = { git = "https://github.com/teodosin/bevy_karta_ui", branch="main" }
iyes_perf_ui = "0.3.0"

[patch."https://github.com/teodosin/bevy_karta_client.git"]
bevy_karta_client = { path = "../bevy_karta_client" }
[patch."https://github.com/teodosin/bevy_karta_ui.git"]
bevy_karta_ui = { path = "../bevy_karta_ui" }


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[toolchain]
channel = "nightly"
