[package]
name = "karta_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agdb = { version = "0.11.2", features = ["serde"] }
axum = "0.8.4"
blake3 = "1.8.2"
directories = "6.0.0"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.12.1", features = ["serde", "v5"]}

[dev-dependencies]
git2 = "0.20.2"
