[package]
name = "karta_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agdb = { version = "0.11.2", features = ["serde"] }
axum = { version = "0.8.4", features = ["macros"] }
blake3 = "1.8.2"
directories = "6.0.0"
ron = "0.10.1"
rustyline = "16.0.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.12.1", features = ["serde", "v5", "v4"]}  # Added v4 feature
tower-http = { version = "0.5.2", features = ["cors"] } # Added for CORS
dunce = "1.0.4" # Added for path canonicalization
mime_guess = "2.0.5"
walkdir = "2.5.0"
trash = "5.2" # For safe deletion to system trash
chrono = { version = "0.4", features = ["serde"] } # For timestamps
fuzzy-matcher = "0.3.7"

[dev-dependencies]
git2 = "0.20.2"
tower = { version = "0.4", features = ["util"] } # For ServiceExt
