[package]
name = "karta"
version = "0.1.0"
description = "A Tauri App"
authors = ["teodosin"]
license = "GPL 3"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
karta_server = { path = "../../karta_server" }
reqwest = { version = "0.12", features = ["json"] }
ron = "0.10"
tokio = { version = "1.47.1", features = ["time"] }
log = "0.4"
dirs = "5.0"

[workspace]
